# p

./: .gitignore  README.md  build.zig  build.zig.zon
assets/: grammar.ebnf
examples/: functions.p  hello.p  objects.p
src/: p.zig  pi.zig
src/p/: Parser.zig  Sema.zig  Tokenizer.zig  common.zig  util.zig
src/p/Parser/: Assign.zig  AssignExpr.zig  AssignTarget.zig  AssignTargetProperty.zig  Block.zig  Call.zig  CallExpr.zig  CallFn.zig  CallProperty.zig  Comparison.zig  ComparisonExpr.zig  Decl.zig  Equality.zig  EqualityExpr.zig  ExprStmt.zig  Factor.zig  FactorExpr.zig  FnArg.zig  FnDecl.zig  FnParam.zig  ForCond.zig  ForInc.zig  ForInit.zig  ForStmt.zig  (+22 more)
src/pi/: Cli.zig
test/: p.zig  pi.zig
test/p/: Parser.zig  Tokenizer.zig
tools/tree-sitter-p/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test_indent.p  tree-sitter.json
tools/tree-sitter-p/bindings/c/: tree-sitter-p.pc.in
tools/tree-sitter-p/bindings/c/tree_sitter/: tree-sitter-p.h
tools/tree-sitter-p/bindings/go/: binding.go  binding_test.go
tools/tree-sitter-p/bindings/node/: binding.cc  index.js
tools/tree-sitter-p/bindings/python/tests/: test_binding.py
tools/tree-sitter-p/bindings/python/tree_sitter_p/: __init__.py  binding.c
tools/tree-sitter-p/bindings/rust/: build.rs  lib.rs
tools/tree-sitter-p/bindings/swift/TreeSitterPTests/: TreeSitterPTests.swift
tools/tree-sitter-p/queries/: folds.scm  highlights.scm  indents.scm  locals.scm
tools/tree-sitter-p/src/: grammar.json  node-types.json  parser.c
(+4 files in other folders)
